--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 
-
-spring.datasource.url=jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
-
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/yogaappdb
+spring.datasource.username=root
+spring.datasource.password=1234
+oc.app.jwtSecret=openclassrooms
+oc.app.jwtExpirationMs=86400000
+spring.jpa.hibernate.ddl-auto=update
