--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,38 @@
+
 spring.datasource.url=jdbc:mysql://localhost:3306/yogaappdb
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MyDialect
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.show-sql=true
+
+
 oc.app.jwtSecret=openclassrooms
 oc.app.jwtExpirationMs=86400000
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+# spring.config.import=file:env.properties
+
+# # setting up port
+# server.port=3001
+
+
+
+# #configure data base    
+# spring.datasource.url=jdbc:mysql://localhost:3306/yogaappdb
+# spring.datasource.username=${DB_USER}
+# spring.datasource.password=${DB_PASSWORD}
+
+# #performing sql
+# # Hibernate ddl auto (create, create-drop, validate, update)
+# spring.jpa.hibernate.ddl-auto=update
+
+
+
+
